# Personal-Statement-Write

./: .gitignore  README.md  psw.py  render.yaml
.claude/: settings.local.json
backend/: .env.example  main.py  pyproject.toml  render.yaml  requirements.txt  start.sh
frontend/: .env.example  netlify.toml  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
