[build-system]
requires = ["setuptools>=65.5.0", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-statement-backend"
version = "1.0.0"
description = "Personal Statement Writing API"
authors = [{name = "User"}]
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "google-generativeai==0.3.2",
    "python-docx==1.1.0",
    "pypdf==3.17.4",
    "pillow>=8.3.2,<9.0.0",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "cryptography==41.0.7",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "httpx==0.25.2",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]